2009-11-05  Adam Barth  <abarth@webkit.org>

        Reviewed by Sam Weinig.

        Cross-domain access to stylesheet text should not be allowed
        https://bugs.webkit.org/show_bug.cgi?id=20527

        Check whether whether the current document can read the cssRules from
        the style sheet.  Firefox throws a security error here, but we return
        null instead because that's what we usually do in these cases.

        Test: http/tests/security/cannot-read-cssrules-redirect.html
              http/tests/security/cannot-read-cssrules.html

        * css/CSSStyleSheet.cpp:
        (WebCore::CSSStyleSheet::cssRules):

2009-11-05  Steve Block  <steveblock@google.com>

        Reviewed by Eric Seidel.

        If the Geolocation service fails to start, invoke the error callback asynchronously.
        https://bugs.webkit.org/show_bug.cgi?id=28276

        All Geolocation callbacks must be invoked asynchronously.
        See http://www.w3.org/TR/geolocation-API/#geolocation_interface

        No new tests possible with current LayoutTestController.

        * page/Geolocation.cpp:
        (WebCore::Geolocation::getCurrentPosition): Modified. Asserts that startRequest returned a notifier.
        (WebCore::Geolocation::watchPosition): Modified. Asserts that startRequest returned a notifier.
        (WebCore::Geolocation::startRequest): Modified. If the Geolocation service fails to start, set a fatal error on the notifier.

2009-11-05  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Eric Seidel.

        Removed the "this is part of the KDE project" comments from 
        all *.h, *.cpp, *.idl, and *.pm files.
        
        https://bugs.webkit.org/show_bug.cgi?id=31167
        
        The maintenance and architecture page in the project wiki lists
        this as a task.
        
        This change includes no changes or additions to test cases 
        since the change affects only comments.
