@@ -78,12 +78,6 @@ namespace WebCore {
 
         static void gcPrologue();
         static void gcEpilogue();
-
-        static void checkMemoryUsage();
-
-    private:
-        // Estimate of current working set.
-        static int workingSetEstimateMB;
     };
 
 }
